fixed form align

--- a/src/pages/index/components/headline.scss
+++ b/src/pages/index/components/headline.scss
@@ -55,5 +55,6 @@
   .search-form {
     margin: 20px;
     margin-top: auto;
+    margin-bottom: auto;
   }
 }
